Issue: Spacing between elements

--- a/assets/src/modules/sm/App/styles/global.css
+++ b/assets/src/modules/sm/App/styles/global.css
@@ -324,7 +324,7 @@ form {
 
 .course-result {
     /*padding: 0 1px;*/
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 
 .course-selected-checkbox {
